Fix: Another overflow attempt

--- a/src/components/watermark.module.scss
+++ b/src/components/watermark.module.scss
@@ -10,7 +10,5 @@
     top: -0.25em;
     left: 0.5em;
     overflow-x: hidden;
-    width: calc(100vw - 2rem - 0.5em);
-    max-width: calc(var(--full-width) - 0.5em)
   }
 }
